--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ html {
     --ground: rgb(247, 220, 111);
     --path: rgb(200, 100, 100);
     --obstacle: rgb(0, 0, 50);
+    --wood: rgb(124, 64, 0);
 
     --text: #0a0605;
     --text-50: #f6f0ee;
